Fixes menu formatting on mobile landscape.

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -95,6 +95,10 @@
           padding: 20px 0;
           margin: 0 7%;
 
+          &:last-of-type {
+            padding-bottom: 0;
+          }
+
           a {
             color: #ffffff;
 
